--- a/pages/TeamBase/index.html
+++ b/pages/TeamBase/index.html
@@ -264,12 +264,20 @@
                 style="all: unset; cursor: pointer"
               >
                 <!-- 멤버 사진 -->
-                <img src="/assets/img/TeamLogo.png" alt="" />
+                <img
+                  src="https://lh6.googleusercontent.com/proxy/DOHE0IxHby7NctAe3JqVTHSkHCKxXw7WnMvkFFVnzk8bS8rJ1DhHhE2bvmNVW0TqORJFKFdLplimiVaJbDMpCQsjS20lvSg9ndLu1ZWr1aYqkdcJ9LoDidsSga_c"
+                  alt=""
+                />
               </button>
             </div>
             <div class="member-body">
               <h3 class="member-name">강준영</h3>
-              <div class="member-info">준영님 코멘트~~~</div>
+              <div class="member-info">
+                안녕하세요.<br />사용자가 불편함과 어색함 없이 편안한 서비스를
+                즐기실 수 있도록 만들고 있습니다.<br />
+                원활한 의사소통으로 빠르게 개선을 하며, 최대한 반영을 하게
+                만들어보겠습니다.
+              </div>
             </div>
           </div>
         </div>
@@ -294,16 +302,9 @@
               ></button>
             </div>
             <div class="modal-body">
-              <div style="display: flex; gap: 20px; margin: 0 20px">
+              <div class="modal-content-wrapper">
                 <!-- 이미지 영역 -->
-                <div
-                  style="
-                    position: relative;
-                    display: inline-block;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                  "
-                >
+                <div class="modal-image-section">
                   <img
                     src="/assets/img/jisung-profile.png"
                     alt="..."
@@ -330,17 +331,7 @@
                   </h5>
                 </div>
                 <!-- 개인정보 영역 -->
-                <div
-                  style="
-                    width: 260px;
-                    height: 150px;
-                    background-color: black;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                    padding: 15px;
-                    box-sizing: border-box;
-                  "
-                >
+                <div class="modal-info-section">
                   <div
                     style="font-size: 14px; line-height: 1.6; color: whitesmoke"
                   >
@@ -359,31 +350,14 @@
                 </div>
               </div>
               <!-- 하단 내용 영역 -->
-              <div style="margin: 20px 20px 0 20px">
-                <ul
-                  style="
-                    width: 426px;
-                    height: 200px;
-                    background-color: black;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                    padding: 15px;
-                    box-sizing: border-box;
-                    margin: 0;
-                    list-style: none;
-                    font-size: 14px;
-                    line-height: 1.6;
-                    color: whitesmoke;
-                  "
-                >
-                  <h5>개인 작업물</h5>
-                  <li style="margin-bottom: 5px">• 싱클리 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 코알누 스터디</li>
-                  <li style="margin-bottom: 5px">• Apple Project FRONTEND</li>
-                  <li style="margin-bottom: 5px">• Google Project FRONTEND</li>
-                  <li style="margin-bottom: 5px">• Netflix Project FRONTEND</li>
-                </ul>
-              </div>
+              <ul class="modal-portfolio-section">
+                <h5>개인 작업물</h5>
+                <li style="margin-bottom: 5px">• 싱클리 FRONTEND</li>
+                <li style="margin-bottom: 5px">• 코알누 스터디</li>
+                <li style="margin-bottom: 5px">• Apple Project FRONTEND</li>
+                <li style="margin-bottom: 5px">• Google Project FRONTEND</li>
+                <li style="margin-bottom: 5px">• Netflix Project FRONTEND</li>
+              </ul>
             </div>
             <div class="modal-footer" style="border-top: none">
               <button
@@ -397,6 +371,7 @@
           </div>
         </div>
       </div>
+
       <div class="modal fade" id="exampleModal-hyunjun" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
           <div
@@ -413,16 +388,9 @@
               ></button>
             </div>
             <div class="modal-body">
-              <div style="display: flex; gap: 20px; margin: 0 20px">
+              <div class="modal-content-wrapper">
                 <!-- 이미지 영역 -->
-                <div
-                  style="
-                    position: relative;
-                    display: inline-block;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                  "
-                >
+                <div class="modal-image-section">
                   <img
                     src="/assets/img/hyunjun-profile.jpg"
                     alt="..."
@@ -449,17 +417,7 @@
                   </h5>
                 </div>
                 <!-- 개인정보 영역 -->
-                <div
-                  style="
-                    width: 260px;
-                    height: 150px;
-                    background-color: black;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                    padding: 15px;
-                    box-sizing: border-box;
-                  "
-                >
+                <div class="modal-info-section">
                   <div
                     style="font-size: 14px; line-height: 1.6; color: whitesmoke"
                   >
@@ -480,31 +438,14 @@
                 </div>
               </div>
               <!-- 하단 내용 영역 -->
-              <div style="margin: 20px 20px 0 20px">
-                <ul
-                  style="
-                    width: 426px;
-                    height: 200px;
-                    background-color: black;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                    padding: 15px;
-                    box-sizing: border-box;
-                    margin: 0;
-                    list-style: none;
-                    font-size: 14px;
-                    line-height: 1.6;
-                    color: whitesmoke;
-                  "
-                >
-                  <h5>개인 작업물</h5>
-                  <li style="margin-bottom: 5px">• 싱클리 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 코알누 스터디 참여</li>
-                  <li style="margin-bottom: 5px">•</li>
-                  <li style="margin-bottom: 5px">•</li>
-                  <li style="margin-bottom: 5px">•</li>
-                </ul>
-              </div>
+              <ul class="modal-portfolio-section">
+                <h5>개인 작업물</h5>
+                <li style="margin-bottom: 5px">• 싱클리 FRONTEND</li>
+                <li style="margin-bottom: 5px">• 코알누 스터디 참여</li>
+                <li style="margin-bottom: 5px">• 항목 3</li>
+                <li style="margin-bottom: 5px">• 항목 4</li>
+                <li style="margin-bottom: 5px">• 항목 5</li>
+              </ul>
             </div>
             <div class="modal-footer" style="border-top: none">
               <button
@@ -518,6 +459,7 @@
           </div>
         </div>
       </div>
+
       <div class="modal fade" id="exampleModal-junyeong" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
           <div
@@ -534,19 +476,12 @@
               ></button>
             </div>
             <div class="modal-body">
-              <div style="display: flex; gap: 20px; margin: 0 20px">
+              <div class="modal-content-wrapper">
                 <!-- 이미지 영역 -->
-                <div
-                  style="
-                    position: relative;
-                    display: inline-block;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                  "
-                >
+                <div class="modal-image-section">
                   <img
                     src="https://lh6.googleusercontent.com/proxy/DOHE0IxHby7NctAe3JqVTHSkHCKxXw7WnMvkFFVnzk8bS8rJ1DhHhE2bvmNVW0TqORJFKFdLplimiVaJbDMpCQsjS20lvSg9ndLu1ZWr1aYqkdcJ9LoDidsSga_c
-                          "
+                "
                     alt="..."
                     width="150"
                     height="150"
@@ -571,17 +506,7 @@
                   </h5>
                 </div>
                 <!-- 개인정보 영역 -->
-                <div
-                  style="
-                    width: 260px;
-                    height: 150px;
-                    background-color: black;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                    padding: 15px;
-                    box-sizing: border-box;
-                  "
-                >
+                <div class="modal-info-section">
                   <div
                     style="font-size: 14px; line-height: 1.6; color: whitesmoke"
                   >
@@ -602,31 +527,14 @@
                 </div>
               </div>
               <!-- 하단 내용 영역 -->
-              <div style="margin: 20px 20px 0 20px">
-                <ul
-                  style="
-                    width: 426px;
-                    height: 200px;
-                    background-color: black;
-                    border: 1px solid whitesmoke;
-                    border-radius: 8px;
-                    padding: 15px;
-                    box-sizing: border-box;
-                    margin: 0;
-                    list-style: none;
-                    font-size: 14px;
-                    line-height: 1.6;
-                    color: whitesmoke;
-                  "
-                >
-                  <h5>개인 작업물</h5>
-                  <li style="margin-bottom: 5px">• 구글 웹사이트 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 넷플릭스 메인 FRONTEND</li>
-                  <li style="margin-bottom: 5px">• 항목 3</li>
-                  <li style="margin-bottom: 5px">• 항목 4</li>
-                  <li style="margin-bottom: 5px">• 항목 5</li>
-                </ul>
-              </div>
+              <ul class="modal-portfolio-section">
+                <h5>개인 작업물</h5>
+                <li style="margin-bottom: 5px">• 구글 웹사이트 FRONTEND</li>
+                <li style="margin-bottom: 5px">• 넷플릭스 메인 FRONTEND</li>
+                <li style="margin-bottom: 5px">• 항목 3</li>
+                <li style="margin-bottom: 5px">• 항목 4</li>
+                <li style="margin-bottom: 5px">• 항목 5</li>
+              </ul>
             </div>
             <div class="modal-footer" style="border-top: none">
               <button
